[package]
name = "nym-socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1"
thiserror = "1"
tokio = { version = "1.21.2", features = ["time", "rt-multi-thread", "process", "macros", "sync", "net", "signal"] }

client-core = { git = "https://github.com/nymtech/nym", branch = "helios_dep", package = "client-core" }
config-common = { git = "https://github.com/nymtech/nym", branch = "helios_dep", package = "nym-config" }
network_defaults = { git = "https://github.com/nymtech/nym", branch = "helios_dep", package = "nym-network-defaults" }
nym_socks5 = { git = "https://github.com/nymtech/nym", branch = "helios_dep", package = "nym-socks5-client" }
task = { git = "https://github.com/nymtech/nym", branch = "helios_dep", package = "nym-task" }